--- a/src/Core/Operator/UniOpDefMacros.hpp.in
+++ b/src/Core/Operator/UniOpDefMacros.hpp.in
@@ -19,7 +19,7 @@
         template <FieldExprType T1>                                                                          \
         static void prepare(const Expression<Name##Op, T1>& expr) {                                          \
             expr.initPropsFrom(expr.arg1);                                                                   \
-            expr.name = fmt::format("{} {}", #op, expr.arg1.name);                                           \
+            expr.name = std::format("{} {}", #op, expr.arg1.name);                                           \
             if constexpr (StructuredFieldExprType<T1>) {                                                     \
                 expr.assignableRange.setEmpty();                                                             \
             } else if constexpr (SemiStructuredFieldExprType<T1>) {                                          \
@@ -70,7 +70,7 @@
         template <FieldExprType T1>                                                                          \
         static void prepare(const Expression<Name##Op, T1>& expr) {                                          \
             expr.initPropsFrom(expr.arg1);                                                                   \
-            expr.name = fmt::format("{}({})", #func, expr.arg1.name);                                        \
+            expr.name = std::format("{}({})", #func, expr.arg1.name);                                        \
             if constexpr (StructuredFieldExprType<T1>) {                                                     \
                 expr.assignableRange.setEmpty();                                                             \
             } else if constexpr (SemiStructuredFieldExprType<T1>) {                                          \
