[CI] Optimize docker build to fix disk space issues

--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -18,6 +18,13 @@ jobs:
       image-tag: ${{ steps.format-tag.outputs.tag }}
 
     steps:
+    - name: Free up disk space
+      run: |
+        sudo apt-get clean
+        sudo apt-get autoremove -y
+        sudo rm -rf /usr/share/dotnet /usr/local/lib/android /opt/ghc
+        df -h
+
     - name: Checkout code
       uses: actions/checkout@v4
 
