Fix abi warning

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -46,8 +46,6 @@ project(opflow VERSION ${OPFLOW_VERSION} LANGUAGES C CXX)
 set(OPFLOW_VERSION_STRING "${OPFLOW_VERSION} - ${SHORT_SHA1} - ${GIT_CHANGE}")
 message(STATUS "Build opflow: ${OPFLOW_VERSION_STRING}")
 
-set(CMAKE_CXX_MODULE_STD 1)
-
 include(GNUInstallDirs)
 
 # ----------------------------------------------------------------------------
@@ -72,8 +70,7 @@ if(MSVC)
     string(APPEND CMAKE_CXX_FLAGS " /Zc:__cplusplus /wd4267 /wd4390 /wd4244")
 endif()
 
-# supress possible abi warning by upgrade compiler
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-psabi")
+# ABI warning suppression moved to target-specific compile options
 # temporary fix for macOS 14 & CLT 15
 if(CMAKE_HOST_SYSTEM_NAME STREQUAL "Darwin"
     AND CMAKE_HOST_SYSTEM_VERSION VERSION_GREATER_EQUAL 23)
@@ -131,10 +128,10 @@ option(OPFLOW_SANITIZE_THREAD "Enable thread sanitizer in tests" OFF)
 option(OPFLOW_SANITIZE_UB "Enable undefined behavior sanitizer in tests" OFF)
 
 # compile options
-option(OPFLOW_BUILD_WARNINGS "Enable compiler warnings" OFF)
 option(OPFLOW_NO_EXCEPTIONS "Compile with -fno-exceptions" OFF)
 option(OPFLOW_ENABLE_MODULE "Enable C++ modules support" OFF)
 if(OPFLOW_ENABLE_MODULE)
+    set(CMAKE_CXX_MODULE_STD 1)
     set(OPFLOW_TARGET_SCOPE PUBLIC)
 else()
     set(OPFLOW_TARGET_SCOPE INTERFACE)
