fix: address package-config review feedback

--- a/cmake/opflowConfig.cmake.in
+++ b/cmake/opflowConfig.cmake.in
@@ -17,6 +17,8 @@
 #
 # ----------------------------------------------------------------------------
 
+@PACKAGE_INIT@
+
 include(CMakeFindDependencyMacro)
 
 set(OPFLOW_WITH_OPENMP @OPFLOW_WITH_OPENMP@)
