--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -375,7 +375,11 @@ if(OPFLOW_INSTALL)
     set(pkg_config "${CMAKE_BINARY_DIR}/${PROJECT_NAME}.pc")
 
     include(CMakePackageConfigHelpers)
-    configure_file("${project_config_in}" "${project_config_out}" @ONLY)
+    configure_package_config_file(
+        "${project_config_in}"
+        "${project_config_out}"
+        INSTALL_DESTINATION "${export_dest_dir}"
+    )
 
     write_basic_package_version_file("${version_config_file}" COMPATIBILITY SameMajorVersion)
     install(FILES "${project_config_out}" "${version_config_file}" DESTINATION "${export_dest_dir}")
