--- a/.github/workflows/CondaPreflight.yml
+++ b/.github/workflows/CondaPreflight.yml
@@ -13,6 +13,10 @@ on:
       - '.github/scripts/ci/**'
   workflow_dispatch:
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.head_ref || github.ref_name }}
+  cancel-in-progress: true
+
 jobs:
   matrix:
     name: Generate Package Matrix
