--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -31,6 +31,10 @@ on:
       - '.github/scripts/ci/**'
   workflow_dispatch:
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.head_ref || github.ref_name }}
+  cancel-in-progress: true
+
 jobs:
   matrix:
     name: Generate Source Matrix
